# add_subdirectory(dhcp_dns)
# add_subdirectory(ftp)
# add_subdirectory(http)
add_subdirectory(W6300_Test)
# add_subdirectory(w6300_loopback)
# add_subdirectory(winbond_flash_read_write)
# add_subdirectory(led_toggle)
# add_subdirectory(flash_read)
# add_subdirectory(mqtt)
# add_subdirectory(sntp)
# add_subdirectory(tcp_client_over_ssl)
# add_subdirectory(tftp)
add_subdirectory(W6300_Ver_read_write)
